Fix blog text looking too cramped up
Increase the line height to 1.5

--- a/styles/index.css
+++ b/styles/index.css
@@ -107,6 +107,7 @@ h3 {
     max-width: 70rem;
     margin: auto;
     border-width: 0px 5px;
+    line-height: 1.5;
 }
 
 .content h3 {
